--- a/S_Foundation/Properties/Resources.resx
+++ b/S_Foundation/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="background-images-for-software-projects-9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\background-images-for-software-projects-9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
